@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
'skinparam linetype ortho
'left to right direction
skinparam classAttributeIconSize 0
hide circle
hide methods

left to right direction

class Player {
    name
    password
    budget
}

class Locomotive {
    iD
}

class LocomotiveModel{
    power
        acceleration
        topSpeed
        operationStartYear
        fuelCost
        maintenancePYear
        cost
}

class LocomotiveType{
}

class Station {
    name
    capacity
    center
}

class StationType{
    radius
    cost
}

class Railway{
    length
    electrification
    cost
}

class RailwayType{
}

class Position{
    xCoordinate
    yCoordinate
}

class Train {
}

class Carriage{
}

class TimeRestriction{
    year
}

class TechnologicalRestriction{
}

class Scenario{
    importation
    exportation
}


Player "*" -- "1" Scenario : selects >
Player "1" -- "*" Station : builds >
Player "1" -- "*" Railway : builds >
Player "1" -- "1..*" Locomotive : buys >

Scenario "1" -- "*" TechnologicalRestriction: includes >
Scenario "1" -- "*" TimeRestriction: includes >

TimeRestriction "1" -- "*" LocomotiveModel: affects >
TechnologicalRestriction "1" -- "*" LocomotiveType: affects >

Position "1" -- "1" Station: has <
Position "1" -- "1" Railway: has <

Station "1" -- "1" StationType: has >

Locomotive "*" -- "1" LocomotiveModel: has >
LocomotiveModel "1..*" -- "1" LocomotiveType: has >


Railway "1..*" -- "2..*" Station : connects >
Railway "1" -- "1" RailwayType: has >

Train "1" -- "1" Locomotive: is part of <
Train "1" -- "*" Carriage: is part of <
Train "1..*" -- "1..*" Railway: runs on >

@enduml